Correções em metas